--- a/SB_Ejemplo1/pom.xml
+++ b/SB_Ejemplo1/pom.xml
@@ -8,18 +8,41 @@
   <version>1.0-SNAPSHOT</version>
   <name>ejemplo1</name>
   <url>http://maven.apache.org</url>
-  
+  <properties>
+      <spring.batch.version>3.0.6.RELEASE</spring.batch.version>
+      <spring-framework.version>4.0.5.RELEASE</spring-framework.version>
+  </properties>
   <dependencies>
-	    <dependency>
-        <groupId>org.springframework.batch</groupId>
-        <artifactId>spring-batch-core</artifactId>
-        <version>3.0.7.RELEASE</version>
-    </dependency>
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-context</artifactId>
-    <version>3.0.7.RELEASE</version>
-</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-core</artifactId>
+			<version>${spring.batch.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-infrastructure</artifactId>
+			<version>${spring.batch.version}</version>
+		</dependency>
   </dependencies>
      <build>
         <plugins>
