--- a/SB_Example1/pom.xml
+++ b/SB_Example1/pom.xml
@@ -3,10 +3,10 @@
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.springbatch.ejemplo1</groupId>
-  <artifactId>ejemplo1</artifactId>
+  <artifactId>SB_Example1</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>ejemplo1</name>
+  <name>SB_Example1 application</name>
   <url>http://maven.apache.org</url>
   <properties>
       <spring.batch.version>4.2.4.RELEASE</spring.batch.version>
