--- a/SB_Example4/pom.xml
+++ b/SB_Example4/pom.xml
@@ -3,10 +3,10 @@
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.springbatch.example2</groupId>
-  <artifactId>example2</artifactId>
+  <artifactId>SB_Example4</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>example2</name>
+  <name>SB_Example4 application</name>
   <url>http://maven.apache.org</url>
   <properties>
       <spring.batch.version>4.2.4.RELEASE</spring.batch.version>
